# eth-health-hackathon

./: .env.example  .gitignore  README.md  dev.sh  docker-compose.yml  package-lock.json
.claude/: settings.json
backend/: .env.example  audio_assembler.py  csv_parser.py  generate_assets.py  main.py  patient_brief.py  patient_interpretation.py  pdf_chunker.py  pyproject.toml  script_gen.py  sophia_client.py  speech.py  summarizer.py  tts.py  vqs_client.py
backend/ingestion/: README.md  embed_colab.ipynb  embed_server.py  load-embeddings-json.py  load-embeddings.py  pyproject.toml  txt-ingest.py
backend/ingestion/csv-data/: chunks.jsonl  documents.jsonl  embeddings.jsonl  embeddings.parquet
backend/ingestion/example/: full_cnv_table_KRAS-TP53-SNV-CNV-Loss-T.txt
backend/ingestion/pdf-files/pdf/: chunks_embedded.json
backend/output/: script_lab.json  summary_lab.json
backend/summarisation/: .env.example  generate_assets.py  pdf_parser.py  pyproject.toml  test_llm.py  tts.py
backend/vqs/: PID-SG019-LPA_variants.curl
db/: init.sql  reload-db.txt
frontend/: package-lock.json  package.json
frontend/app/: Chatbot.tsx  globals.css  layout.tsx  page.tsx
new_frontend/: package-lock.json  package.json
new_frontend/.lovable/: plan.md
new_frontend/src/: routeTree.gen.ts  styles.css
new_frontend/src/components/: ChatPanel.tsx  DnaSpinner.tsx  GeneVisualization.tsx  PatientChecklist.tsx  PatientDetail.tsx  SummaryPanel.tsx  (+1 more)
sample csvs one patient/: PID-SG019-LPA_SG019-LPA_variant_table_export_2_.txt  coverage-data-interpretation-1088-20260509-140955.txt
(+8 files in other folders)
